# sentence-VAE

./: .gitignore  README.md  create_vocab.py  criterion.py  dataset.py  dowloaddata.sh  evaluate.py  generate.py  infer.py  loss.py  main.py  model.py  paraphrase.py  preprocess.py  pyproject.toml  sample.py  search.py  test.py  tokenizer.py  train.py  utils.py  vocabulary.py
models/: rnn_vae.py  transformer_vae.py  vae.py
sentence_vae/: __init__.py  criterion.py  model.py
