[project]
name = "sentence-vae"
version = "0.1.0"
description = ""
dependencies = [
    "tqdm>=4.66.2",
    "torch>=2.2.1",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=7.0.0",
    "black>=24.3.0",
]

[tool.rye.scripts]
format = "black --line-length 79 ."
lint = "flake8 --exclude .venv ."
